copy pasta you know

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 		<link rel="stylesheet" type="text/css" href="mopage_style.css">
 		<link href="https://fonts.googleapis.com/css?family=Overpass" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+		<link rel="shortcut icon" href="favicon.ico" />
 
 	</head>
 
 	<body>
-
+		<title>Movember Canada - Home</title>
 		<img id="nav_image" src="pics/mopage_navbar.png"/>
 		<div class="main">
 			<div id="profile_pic">
