Changed 41664 and mocoin vlues

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 			<div id="info">
 				<h1>Brianna Leung</h1>
 				<div id="balance">
-					<h2>$18,573</h2>
-					<h2>Mo'Coins: 12,461</h2>
+					<h2>$189</h2>
+					<h2>10,461 Mo'Coins</h2>
 				</div>
 				<img id="target" src="pics/target.png"/>
 				<div id="buttons">
